chore: add filters and register in swagger
- Add Amenity filter;
- Add date range filter;
- Update specs to add tests to filters;
- Update Swagger doc;
